<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GsdBle</string>

    <string name="bt_not_available">Bluetooth Is Not Available On Your Device</string>
    <string name="show_details">Show Details</string>
    <string name="connect">connect</string>
    <string name="apply">Apply</string>
    <string name="disconnect">disconnect</string>
    <string name="scanning">Scanning</string>
    <string name="timeout">Timeout</string>
    <string name="data_saved">Data Saved</string>
    <string name="record">Record</string>
    <string name="start">Start Recording</string>
    <string name="stop">Stop Recording</string>
    <string name="intervalTime">Sampling Rate:</string>
    <string name="MTU">MTU:</string>
    <string name="ODR">ODR:</string>
    <string name="Pause">Pause:</string>
    <string name="DeviceText">Sensor Location:</string>
    <string name="sampleRateText">Received sample rate:</string>
    <string name="addNoteTitle">Add note to recording</string>
    <string name="ok">OK</string>
    <string name="defaultLabel">default_label</string>
    <string name="changeLabel">change label</string>
    <string name="timer_zero">00:00:00</string>

    <string name="labelInputTitle">Enter Custom Label</string>
    <string name="customLabel">custom label</string>
    <string name="labelIndicator">Label:</string>
    <string name="maxRecordingLengthText">Recording duration:</string>
    <string name="startCountdownPrefix">Recording starts in\u0020</string>
    <string name="secondPostfix">s</string>
    <string name="stopCountdownPrefix">Recording stops in\u0020</string>
    <string name="settings">Settings</string>
    <string-array name="activities">
        <item>running</item>
        <item>sideskips_right</item>
        <item>sideskips_left</item>
        <item>carioca_right</item>
        <item>carioca_left</item>
        <item>high_knee_run</item>
        <item>heel_to_butt</item>
        <item>@string/customLabel</item>
    </string-array>
    <string-array name="filters">
        <item>Mean</item>
        <item>Median</item>
        <item>Butterworth</item>
        <item>Bessel</item>
        <item>Chebyshev Type I</item>
        <item>Chebyshev Type II</item>
    </string-array>
    <string-array name="iirfilters">
        <item>Bandstop</item>
        <item>Bandpass</item>
        <item>Lowpass</item>
        <item>Highpass</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="recording_header">Recording</string>
    <string name="preprocessing_header">Preprocessing</string>
    <string name="devices_header">Device Manager</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Preferences -->
    <string name="enableFixRecLen_title">Set a fixed recording duration</string>
    <string name="fixRecLen_summary_on">Stops the recording after a fixed amount of time </string>
    <string name="fixRecLen_summary_off">The recording needs to be stopped manually</string>
    <string name="fixRecLen_summary_title">recording duration (seconds):</string>

    <string name="startRecTimer_title">Pre-recording countdown</string>
    <string name="startRecTimer_summary_on">The recording starts after a fixed amount of time </string>
    <string name="startRecTimer_summary_off">The recording starts when pressing the start record button</string>
    <string name="startRecTimer_summary_title">pre-record timer duration (seconds):</string>

    <string name="enablePrePro_title">Enable Preprocessing</string>
    <string name="advancedSettings">Advanced Settings</string>
    <string name="editTS">Manually set drift</string>
</resources>
