<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.pascaldornfeld.gsdble.SettingsActivity$RecordingFragment"
        app:icon="?android:attr/listChoiceIndicatorSingle"
        app:key="recording_header"
        app:title="@string/recording_header" />

    <Preference
        app:fragment="com.pascaldornfeld.gsdble.SettingsActivity$PreprocessingFragment"
        app:icon="@drawable/preprocess"
        app:key="preprocessing_header"
        app:title="@string/preprocessing_header" />

    <Preference
        app:key="devices_header"
        app:title="@string/devices_header"
        app:icon="@android:drawable/ic_menu_search">
        <intent android:action="com.pascaldornfeld.gsdble.DeviceManager"/>
    </Preference>


</PreferenceScreen>